# whisper-api-server

./: Cargo.toml  Dockerfile  README.md  docker-build.sh  whisper-api-server.wasm
.github/workflows/: build.yml  release.yml  test_api_server.yml
src/: error.rs  main.rs  utils.rs
src/backend/: burn.rs  mod.rs  piper.rs  whisper.rs
tests/: server_basic.hurl  transcriptions.hurl  translations.hurl
