[package]
name = "audio-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
endpoints = { version = "=0.8.1", path = "/Volumes/Dev/secondstate/me/LlamaEdge/api-server/endpoints" }
futures = { version = "0.3.6", default-features = false, features = ["async-await", "std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
once_cell = "1.18"
mime_guess = "2.0.4"
futures-util = "0.3"
url = "^2.5"
anyhow = "1.0.80"
multipart-2021 = "0.19.0"
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
wasi-logger = { version = "0.1.2", features = ["kv"] }
chrono = "0.4.38"
wasmedge-wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn.git", branch = "burn" }
hound = "3.5.0"
