[package]
name = "whisper-api-server"
version = "0.1.0"
edition = "2021"

[dependencies]
endpoints = { version = "=0.8.2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper_wasi = { version = "0.15", features = ["full"] }
tokio_wasi = { version = "1", features = ["full"] }
thiserror = "1"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap = { version = "4.4.6", features = ["cargo", "derive"] }
once_cell = "1.18"
anyhow = "1.0.80"
multipart-2021 = "0.19.0"
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
wasi-logger = { version = "0.1.2", features = ["kv"] }
wasmedge-wasi-nn = { git = "https://github.com/second-state/wasmedge-wasi-nn.git", branch = "burn" }
hound = "3.5.0"
