[package]
name = "whisper-api-server"
version = "0.2.0-dev"
edition = "2021"

[dependencies]
endpoints = { version = "=0.13.0", path = "/Volumes/Dev/secondstate/me/LlamaEdge/api-server/endpoints" }
llama-core = { version = "=0.15.0", features = [
    "logging",
], path = "/Volumes/Dev/secondstate/me/LlamaEdge/api-server/llama-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "^1.36", features = ["io-util", "fs", "net", "time", "rt", "macros"] }
thiserror = "1"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
clap = { version = "4.4.6", features = ["cargo"] }
anyhow = "1.0.80"
multipart-2021 = "0.19.0"
log = { version = "0.4.21", features = ["std", "kv", "kv_serde"] }
wasi-logger = { version = "0.1.2", features = ["kv"] }

[patch.crates-io]
socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
reqwest = { git = "https://github.com/second-state/wasi_reqwest.git", branch = "0.11.x" }
hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
